-
Bug
-
Resolution: Fixed
-
P4
-
8
-
b03
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8250696 | openjdk7u | Severin Gehwolf | P4 | Resolved | Fixed | master |
Starting with 8u262-b01 builds we are seeing test failures in sun/misc/Version/Version.java
jdkVersionInfo: input=1.8.0_262-ea-b01 output=1.8.0_262-b1
JDK version = 1.8.0_262-b1 1.8.0_6-b1
----------System.err:(13/788)----------
java.lang.RuntimeException: Unmatched version: 1.8.0_262-b1 vs 1.8.0_6-b1
at Version.main(Version.java:47)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:498)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.lang.Thread.run(Thread.java:748)
The issue is that sun.misc.Version.jdkUpdateVersion() returns '6' rather than '262'.
See also:
http://mail.openjdk.java.net/pipermail/jdk8u-dev/2020-May/011642.html
jdkVersionInfo: input=1.8.0_262-ea-b01 output=1.8.0_262-b1
JDK version = 1.8.0_262-b1 1.8.0_6-b1
----------System.err:(13/788)----------
java.lang.RuntimeException: Unmatched version: 1.8.0_262-b1 vs 1.8.0_6-b1
at Version.main(Version.java:47)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:498)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.lang.Thread.run(Thread.java:748)
The issue is that sun.misc.Version.jdkUpdateVersion() returns '6' rather than '262'.
See also:
http://mail.openjdk.java.net/pipermail/jdk8u-dev/2020-May/011642.html
- backported by
-
JDK-8250696 JDK 8u: sun.misc.Version.jdkUpdateVersion() returns wrong result
-
- Resolved
-