8244548: JDK 8u: sun.misc.Version.jdkUpdateVersion() returns wrong result Reviewed-by: aph, andrew